--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       
 
       /* Hint: What can you do with a media query and flexbox? */
-      @media (min-width:119px) and (max-width: 2600px){
+      @media (max-width: 680px){
         .pricing-container{
           display: flex;
           gap: 30px;;
